Colaboratory を使用して作成しました

--- a/Fractional_Encoding.ipynb
+++ b/Fractional_Encoding.ipynb
@@ -4,9 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "n4iGy0SCa7C7"
-      ],
       "mount_file_id": "1vw8RHftAAZ1fhymEYvJYje7_hbwec6Fe",
       "authorship_tag": "ABX9TyMK+SLDOYPj+5syfl1GVIjm",
       "include_colab_link": true
@@ -27,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mikiyonekura/Fractional-Encoding/blob/main/Fractional_Encoding_ipynb_%E3%81%AE%E3%82%B3%E3%83%94%E3%83%BC.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mikiyonekura/Fractional-Encoding/blob/main/Fractional_Encoding.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
